在MySQL账户信息表格最前面添加ID列
- 新增功能：在MySQL账户信息表格最前面添加ID列
- 表头调整：重新分配列宽，为ID列预留8%宽度
- 列宽优化：
  - ID：8% (新增)
  - 名称：25% (原30%)
  - 插件：12% (保持不变)
  - 锁定状态：7% (保持不变)
  - 超级用户：7% (保持不变)
  - 删除状态：8% (保持不变)
  - 最后变更时间：15% (原18%)
  - 操作：18% (保持不变)
- 显示效果：ID以灰色徽章形式显示，便于识别和引用
- 现在可以快速定位和引用特定账户的ID

--- a/app/templates/instances/detail.html
+++ b/app/templates/instances/detail.html
@@ -229,12 +229,13 @@
                         <thead>
                             <tr>
                                 {% if instance.db_type == 'mysql' %}
-                                <th style="width: 30%;">名称</th>
+                                <th style="width: 8%;">ID</th>
+                                <th style="width: 25%;">名称</th>
                                 <th style="width: 12%;">插件</th>
                                 <th style="width: 7%;">锁定状态</th>
                                 <th style="width: 7%;">超级用户</th>
                                 <th style="width: 8%;">删除状态</th>
-                                <th style="width: 18%;">最后变更时间</th>
+                                <th style="width: 15%;">最后变更时间</th>
                                 <th style="width: 18%;">操作</th>
                                 {% elif instance.db_type == 'sqlserver' %}
                                 <th>登录名</th>
@@ -277,6 +278,11 @@
                             <tr class="account-row" data-account-id="{{ account.id }}" 
                                 {% if account.is_deleted %}data-is-deleted="true" style="opacity: 0.6; background-color: #f8f9fa;"{% else %}data-is-deleted="false"{% endif %}>
                                 {% if instance.db_type == 'mysql' %}
+                                <td>
+                                    <span class="badge bg-secondary" style="font-size: 0.75em;">
+                                        {{ account.id }}
+                                    </span>
+                                </td>
                                 <td>
                                     <div class="d-flex align-items-center">
                                         <i class="fas fa-user text-primary me-2"></i>
