为SQL Server、PostgreSQL、Oracle账户信息表格同步添加ID列和列宽优化
- 同步功能：为所有数据库类型统一添加ID列
- 表头优化：
  - SQL Server: ID(8%) + 登录名(25%) + 密码修改时间(15%) + 状态(8%) + 超级用户(8%) + 最后变更时间(15%) + 操作(21%)
  - PostgreSQL: ID(8%) + 角色名(30%) + 状态(10%) + 超级用户(10%) + 最后变更时间(20%) + 操作(22%)
  - Oracle: ID(6%) + Oracle ID(8%) + 用户名(15%) + 认证类型(8%) + 状态(6%) + 锁定日期(10%) + 过期日期(10%) + 默认表空间(10%) + 创建时间(10%) + 超级用户(6%) + 最后变更时间(10%) + 操作(11%)
- 数据行优化：
  - 所有数据库类型都添加ID列显示
  - ID以灰色徽章形式显示，保持一致的视觉效果
  - 列宽合理分配，确保重要信息完整显示
- 排序功能：所有数据库类型都支持按账户名称排序
- 现在所有数据库类型的账户信息表格都有统一的ID列和优化的布局

--- a/app/templates/instances/detail.html
+++ b/app/templates/instances/detail.html
@@ -238,30 +238,33 @@
                                 <th style="width: 15%;">最后变更时间</th>
                                 <th style="width: 18%;">操作</th>
                                 {% elif instance.db_type == 'sqlserver' %}
-                                <th>登录名</th>
-                                <th>密码修改时间</th>
-                                <th>状态</th>
-                                <th>超级用户</th>
-                                <th>最后变更时间</th>
-                                <th>操作</th>
+                                <th style="width: 8%;">ID</th>
+                                <th style="width: 25%;">登录名</th>
+                                <th style="width: 15%;">密码修改时间</th>
+                                <th style="width: 8%;">状态</th>
+                                <th style="width: 8%;">超级用户</th>
+                                <th style="width: 15%;">最后变更时间</th>
+                                <th style="width: 21%;">操作</th>
                                 {% elif instance.db_type == 'postgresql' %}
-                                <th>角色名</th>
-                                <th>状态</th>
-                                <th>超级用户</th>
-                                <th>最后变更时间</th>
-                                <th>操作</th>
+                                <th style="width: 8%;">ID</th>
+                                <th style="width: 30%;">角色名</th>
+                                <th style="width: 10%;">状态</th>
+                                <th style="width: 10%;">超级用户</th>
+                                <th style="width: 20%;">最后变更时间</th>
+                                <th style="width: 22%;">操作</th>
                                 {% elif instance.db_type == 'oracle' %}
-                                <th>Oracle ID</th>
-                                <th>用户名</th>
-                                <th>认证类型</th>
-                                <th>状态</th>
-                                <th>锁定日期</th>
-                                <th>过期日期</th>
-                                <th>默认表空间</th>
-                                <th>创建时间</th>
-                                <th>超级用户</th>
-                                <th>最后变更时间</th>
-                                <th>操作</th>
+                                <th style="width: 6%;">ID</th>
+                                <th style="width: 8%;">Oracle ID</th>
+                                <th style="width: 15%;">用户名</th>
+                                <th style="width: 8%;">认证类型</th>
+                                <th style="width: 6%;">状态</th>
+                                <th style="width: 10%;">锁定日期</th>
+                                <th style="width: 10%;">过期日期</th>
+                                <th style="width: 10%;">默认表空间</th>
+                                <th style="width: 10%;">创建时间</th>
+                                <th style="width: 6%;">超级用户</th>
+                                <th style="width: 10%;">最后变更时间</th>
+                                <th style="width: 11%;">操作</th>
                                 {% else %}
                                 <th>名称</th>
                                 <th>用户</th>
@@ -350,6 +353,11 @@
                                 </td>
                                 {% elif instance.db_type == 'sqlserver' %}
                                 <td>
+                                    <span class="badge bg-secondary" style="font-size: 0.75em;">
+                                        {{ account.id }}
+                                    </span>
+                                </td>
+                                <td>
                                     <div class="d-flex align-items-center">
                                         <i class="fas fa-user text-primary me-2"></i>
                                         <strong>{{ account.username }}</strong>
@@ -403,6 +411,11 @@
                                 </td>
                                 {% elif instance.db_type == 'postgresql' %}
                                 <td>
+                                    <span class="badge bg-secondary" style="font-size: 0.75em;">
+                                        {{ account.id }}
+                                    </span>
+                                </td>
+                                <td>
                                     <div class="d-flex align-items-center">
                                         <i class="fas fa-user text-primary me-2"></i>
                                         <strong>{{ account.username }}</strong>
@@ -445,6 +458,11 @@
                                     </div>
                                 </td>
                                 {% elif instance.db_type == 'oracle' %}
+                                <td>
+                                    <span class="badge bg-secondary" style="font-size: 0.75em;">
+                                        {{ account.id }}
+                                    </span>
+                                </td>
                                 <td>
                                     {% if account.user_id is not none %}
                                         <span class="badge bg-info">{{ account.user_id }}</span>
