--- a/app/templates/instances/detail.html
+++ b/app/templates/instances/detail.html
@@ -247,21 +247,23 @@
                                 <th style="width: 18%;">操作</th>
                                 {% elif instance.db_type == 'postgresql' %}
                                 <th style="width: 8%;">ID</th>
-                                <th style="width: 30%;">角色名</th>
-                                <th style="width: 10%;">状态</th>
-                                <th style="width: 10%;">超级用户</th>
-                                <th style="width: 20%;">最后变更时间</th>
-                                <th style="width: 22%;">操作</th>
+                                <th style="width: 25%;">角色名</th>
+                                <th style="width: 8%;">状态</th>
+                                <th style="width: 8%;">超级用户</th>
+                                <th style="width: 8%;">删除状态</th>
+                                <th style="width: 15%;">最后变更时间</th>
+                                <th style="width: 20%;">操作</th>
                                 {% elif instance.db_type == 'oracle' %}
                                 <th style="width: 8%;">ID</th>
-                                <th style="width: 10%;">Oracle ID</th>
-                                <th style="width: 20%;">用户名</th>
-                                <th style="width: 8%;">状态</th>
-                                <th style="width: 12%;">锁定日期</th>
-                                <th style="width: 12%;">过期日期</th>
-                                <th style="width: 8%;">超级用户</th>
-                                <th style="width: 12%;">最后变更时间</th>
-                                <th style="width: 20%;">操作</th>
+                                <th style="width: 8%;">Oracle ID</th>
+                                <th style="width: 18%;">用户名</th>
+                                <th style="width: 7%;">状态</th>
+                                <th style="width: 10%;">锁定日期</th>
+                                <th style="width: 10%;">过期日期</th>
+                                <th style="width: 7%;">超级用户</th>
+                                <th style="width: 8%;">删除状态</th>
+                                <th style="width: 10%;">最后变更时间</th>
+                                <th style="width: 18%;">操作</th>
                                 {% else %}
                                 <th>名称</th>
                                 <th>用户</th>
@@ -436,6 +438,17 @@
                                     {% endif %}
                                 </td>
                                 <td>
+                                    {% if account.is_deleted %}
+                                        <span class="badge bg-danger">
+                                            <i class="fas fa-trash me-1"></i>已删除
+                                        </span>
+                                    {% else %}
+                                        <span class="badge bg-success">
+                                            <i class="fas fa-check me-1"></i>正常
+                                        </span>
+                                    {% endif %}
+                                </td>
+                                <td>
                                     {% if account.last_change_time %}
                                         <small class="text-muted">
                                             <i class="fas fa-clock me-1"></i>
@@ -516,6 +529,17 @@
                                         </span>
                                     {% else %}
                                         <span class="badge bg-secondary">否</span>
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    {% if account.is_deleted %}
+                                        <span class="badge bg-danger">
+                                            <i class="fas fa-trash me-1"></i>已删除
+                                        </span>
+                                    {% else %}
+                                        <span class="badge bg-success">
+                                            <i class="fas fa-check me-1"></i>正常
+                                        </span>
                                     {% endif %}
                                 </td>
                                 <td>
