--- a/app/templates/accounts/sync_records.html
+++ b/app/templates/accounts/sync_records.html
@@ -303,7 +303,7 @@
 
 <!-- 详情模态框 -->
 <div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="detailsModalLabel">同步详情</h5>
